--- a/package.json
+++ b/package.json
@@ -4,12 +4,20 @@
   "description": "Image Processing API node.js",
   "main": "index.js",
   "dependencies": {
+    "@types/sharp": "^0.29.2",
+    "console-stamp": "^3.0.3",
     "express": "^4.17.1",
+    "jasmine": "^3.9.0",
+    "jasmine-spec-reporter": "^7.0.0",
     "sharp": "^0.29.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jasmine": "^3.9.1",
     "@types/node": "^16.10.3",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^8.0.0",
     "prettier": "^2.4.1",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
@@ -17,7 +25,9 @@
   "scripts": {
     "build": "npx tsc",
     "prettier": "prettier --config .prettierrc 'src/**/*.ts' --write",
-    "start": "npm run build && node build/index"
+    "linter": "eslint . --ext .ts",
+    "jasmine": "jasmine",
+    "start": "npm run build && npm run jasmine && node build/index"
   },
   "repository": {
     "type": "git",
