--- a/tsconfig.json
+++ b/tsconfig.json
@@ -97,5 +97,5 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
-  "exclude": ["node_modules","spec","tests","build"]
+  "exclude": ["node_modules","spec","build"]
 }
