--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "dependencies": {
     "@types/sharp": "^0.29.2",
     "console-stamp": "^3.0.3",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "jasmine": "^3.9.0",
     "jasmine-spec-reporter": "^7.0.0",
     "sharp": "^0.29.1"
   },
   "devDependencies": {
+    "@types/ejs": "^3.1.0",
     "@types/express": "^4.17.13",
     "@types/jasmine": "^3.9.1",
     "@types/node": "^16.10.3",
