--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,9 @@ build/Release
 node_modules/
 jspm_packages/
 
+# cached images
+assets/image-uploader/thumbs
+
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
 
