--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "express": "^4.17.1",
     "jasmine": "^3.9.0",
     "jasmine-spec-reporter": "^7.0.0",
-    "sharp": "^0.29.1"
+    "sharp": "^0.29.1",
+    "supertest": "^6.1.6"
   },
   "devDependencies": {
     "@types/ejs": "^3.1.0",
     "@types/express": "^4.17.13",
     "@types/jasmine": "^3.9.1",
     "@types/node": "^16.10.3",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.0",
@@ -29,8 +31,9 @@
     "prettier": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "linter": "eslint . --ext .ts",
     "jasmine": "jasmine",
+    "test": "npm run build && npm run jasmine",
     "dev": "ts-node src/index",
-    "start": "npm run build && npm run jasmine && node build/index"
+    "start": "npm run test && node build/index"
   },
   "repository": {
     "type": "git",
