--- a/package.json
+++ b/package.json
@@ -4,14 +4,10 @@
   "description": "Image Processing API node.js",
   "main": "index.js",
   "dependencies": {
-    "@types/sharp": "^0.29.2",
     "console-stamp": "^3.0.3",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "jasmine": "^3.9.0",
-    "jasmine-spec-reporter": "^7.0.0",
-    "sharp": "^0.29.1",
-    "supertest": "^6.1.6"
+    "sharp": "^0.29.1"
   },
   "devDependencies": {
     "@types/ejs": "^3.1.0",
@@ -21,10 +17,14 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "@types/sharp": "^0.29.2",
     "eslint": "^8.0.0",
     "prettier": "^2.4.1",
     "ts-node": "^10.2.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "jasmine": "^3.9.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "supertest": "^6.1.6"
   },
   "scripts": {
     "build": "npx tsc",
@@ -33,7 +33,7 @@
     "jasmine": "jasmine",
     "test": "npm run build && npm run jasmine",
     "dev": "ts-node src/index",
-    "start": "npm run test && node build/index"
+    "start": "npm run build && node build/index"
   },
   "repository": {
     "type": "git",
